--- a/about.html
+++ b/about.html
@@ -78,5 +78,6 @@ This site presents the Mode Wheel primarily as an instrument to be explored. A m
       </footer>
     </div>
   </div>
+  <script src="assets/mobile-nav.js"></script>
 </body>
 </html>
