--- a/index.html
+++ b/index.html
@@ -111,5 +111,6 @@
     </div>
   </div>
   <script src="assets/wheel.js"></script>
+  <script src="assets/mobile-nav.js"></script>
 </body>
 </html>
