--- a/spheres.html
+++ b/spheres.html
@@ -26,25 +26,24 @@
     </aside>
 
     <div class="content">
-      <header class="topbar stone" aria-label="Mobile header">
-        <div class="brand">
-          <a href="index.html">
+      <header class="topbar stone mobile-header" aria-label="Mobile header">
+        <div class="mobile-header-inner">
+          <a class="brand" href="index.html" aria-label="Mode Wheel home">
             <div class="title">Mode Wheel</div>
             <div class="subtitle">Music Theory Portal</div>
           </a>
+
+          <button class="hamburger" type="button" aria-label="Open menu" aria-expanded="false">☰</button>
         </div>
-        <nav class="mobile-nav" aria-label="Mobile navigation">
-          <div class="row top">
-          <a href="about.html" class="navbtn" style="--accent:var(--c-about)"><span class="label">About</span></a>
-          <a href="harmonics.html" class="navbtn" style="--accent:var(--c-harmonics)"><span class="label">Harmonics</span></a>
-          <a href="theory.html" class="navbtn" style="--accent:var(--c-theory)"><span class="label">Theory</span></a>
-          <a href="contact.html" class="navbtn" style="--accent:var(--c-contact)"><span class="label">Contact</span></a>
-          </div>
-          <div class="row bottom">
-          <a href="spheres.html" class="navbtn is-current" style="--accent:var(--c-spheres)"><span class="label">Music of the Spheres</span></a>
-          <a href="index.html" class="navbtn" style="--accent:var(--c-modewheel)"><span class="label">Mode Wheel</span></a>
-          <a href="shop.html" class="navbtn" style="--accent:var(--c-shop)"><span class="label">Shop</span></a>
-          </div>
+
+        <nav class="mobile-drawer" aria-label="Mobile navigation" hidden>
+        <a href="index.html" class="navbtn" style="--accent:var(--c-modewheel)"><span class="label">Mode Wheel</span></a>
+        <a href="about.html" class="navbtn" style="--accent:var(--c-about)"><span class="label">About</span></a>
+        <a href="theory.html" class="navbtn" style="--accent:var(--c-theory)"><span class="label">Theory</span></a>
+        <a href="harmonics.html" class="navbtn" style="--accent:var(--c-harmonics)"><span class="label">Harmonics</span></a>
+        <a href="spheres.html" class="navbtn is-current" style="--accent:var(--c-spheres)"><span class="label">Music of the Spheres</span></a>
+        <a href="shop.html" class="navbtn" style="--accent:var(--c-shop)"><span class="label">Shop</span></a>
+        <a href="contact.html" class="navbtn" style="--accent:var(--c-contact)"><span class="label">Contact</span></a>
         </nav>
       </header>
 
