--- a/theory.html
+++ b/theory.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Theory — Mode Wheel</title>
   <meta name="description" content="Mode Wheel: an interactive instrument for exploring modes, scales, and harmonic structure." />
-  <link rel="stylesheet" href="assets/site.css" />
+  <link rel="stylesheet" href="assets/site.css?v=4" />
 </head>
 <body>
   <div class="page">
@@ -62,6 +62,6 @@
       </footer>
     </div>
   </div>
-  <script src="assets/mobile-nav.js"></script>
+  <script src="assets/mobile-nav.js?v=4"></script>
 </body>
 </html>
