--- a/about.html
+++ b/about.html
@@ -55,16 +55,19 @@
 
 <p>The Mode Wheel is an interactive tool and instrument used to visualize, understand, and play the modes of any note set.</p>
 
-<p>To use it, simply select a note set. To do this select the intervals to be included from the outer ring, or by dialing it in using the controls below the wheel. Once selected, the note set can be transposed by rotating the note wheel. The colored spokes can also be rotated to change the mode. By default the wheel start in C Major (C Ionian).</p>
+<p>To begin, select a note set by choosing intervals from the outer ring or by using the controls beneath the wheel. The note wheel can be rotated to transpose the set, while the colored spokes may be rotated to shift between modes. By default, the wheel opens in C Major (C Ionian).</p>
 
 <p>To listen to the various modes, click on the mode names in the colored tiles. Clicking on the Roman numerals will play the triad built from that scale. The individual notes can also be played.</p>
 
-<p>Each note set in any given mode can also be referenced by its index number. Index numbers are constructed with a 3 decimal format of: (number of notes in set).(mode family number).(mode number)
-This site presents the Mode Wheel primarily as an instrument to be explored. A more detailed explanation of this system for sorting mode families and its theoretical foundations will be published in the future.</p>
+<p>Each note set in any given mode can be referenced by its index number, formated as:</p> 
+  
+  <p><b>number of notes).(mode family).(mode)</b></p>
+  
+<p>This site presents the Mode Wheel primarily as an instrument to be explored. A more detailed explanation of this system for sorting mode families and its theoretical foundations will be published in the future.</p>
 
 <p>The Mode Wheel and its underlying system of organizing musical scales were developed by Jake Masterson. I have been working on iterations of this project since at least 2012, refining both the visual instrument and the theoretical framework that supports it.</p>
 
-<p>The Mode Wheel is one of many circular representations of musical material-- its structure, behavior, and internal ordering reflect an original system developed independently over many years of experimentation, study, and practical use.
+<p>The Mode Wheel is one of many circular representations of musical material-- its structure, behavior, and internal ordering reflect an original system developed over many years of experimentation, study, and practical use.
 </p>
 
   <p class="note">© 2012–2026 Jake Masterson. The Mode Wheel and related materials are original works.</p>
