--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
 
 <p>Each note set in any given mode can be referenced by its index number, formated as:</p> 
   
-  <p><b>number of notes).(mode family).(mode)</b></p>
+  <p><b>(number of notes).(mode family).(mode)</b></p>
   
 <p>This site presents the Mode Wheel primarily as an instrument to be explored. A more detailed explanation of this system for sorting mode families and its theoretical foundations will be published in the future.</p>
 
