--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
 
 <p>To begin, select a note set by choosing intervals from the outer ring or by using the controls beneath the wheel. The note wheel can be rotated to transpose the set, while the colored spokes may be rotated to shift between modes. By default, the wheel opens in C Major (C Ionian).</p>
 
-<p>To listen to the various modes, click on the mode names in the colored tiles. Clicking on the Roman numerals will play the triad built from that scale. The individual notes can also be played.</p>
+<p>To listen to the various modes, make sure volume is on and silent mode is off, then click on the mode names in the colored tiles. Clicking on the Roman numerals will play the triad built from that scale. The individual notes can also be played.</p>
 
 <p>Each note set in any given mode can be referenced by its index number, formated as:</p> 
   
