--- a/harmonics.html
+++ b/harmonics.html
@@ -51,7 +51,7 @@
         
 <section class="card stone frame-outer"><div class="inlay"><div class="inlay">
   <h1>Harmonics</h1>
-  <p>This section covers the topics related to the harmonic ratios. The mathematical basis from which our systems of music theory have emerged.</p>
+  <p>This section covers topics related to the harmonic ratios. The mathematical foundation on which our systems of music theory stand.</p>
   <p class="note">More coming soon...</p>
 </div></div></section>
 
